--- a/public/index.html
+++ b/public/index.html
@@ -234,7 +234,20 @@
         </div>
         <div class="form-group">
           <label class="form-label">源码路径</label>
-          <input type="text" class="form-input" id="groupSourcePath" placeholder="如：lib/pages/home_page.dart">
+          <div style="display:flex;flex-direction:column;gap:8px;">
+            <div style="display:flex;align-items:center;gap:8px;">
+              <span style="font-size:12px;color:var(--text-muted);width:80px;">Flutter</span>
+              <input type="text" class="form-input" id="groupSourcePathFlutter" placeholder="如：lib/pages/home_page.dart" style="flex:1;">
+            </div>
+            <div style="display:flex;align-items:center;gap:8px;">
+              <span style="font-size:12px;color:var(--text-muted);width:80px;">React Native</span>
+              <input type="text" class="form-input" id="groupSourcePathRN" placeholder="如：app/home.tsx" style="flex:1;">
+            </div>
+            <div style="display:flex;align-items:center;gap:8px;">
+              <span style="font-size:12px;color:var(--text-muted);width:80px;">UniApp</span>
+              <input type="text" class="form-input" id="groupSourcePathUniapp" placeholder="如：pages/home/home.vue" style="flex:1;">
+            </div>
+          </div>
         </div>
         <div class="form-group">
           <label class="form-label">标记颜色</label>
@@ -263,6 +276,7 @@
           <select class="form-select" id="targetPlatform">
             <option value="flutter">Flutter (Dart)</option>
             <option value="react-native">React Native (TypeScript)</option>
+            <option value="uniapp">UniApp (Vue)</option>
           </select>
         </div>
         <div class="form-group">
