--- a/public/index.html
+++ b/public/index.html
@@ -149,6 +149,15 @@
             添加交互
           </button>
         </div>
+
+        <div class="panel-section">
+          <div class="panel-section-title">图片替换</div>
+          <div id="imageReplacementList"></div>
+          <button class="btn btn-secondary btn-sm" style="width:100%;margin-top:8px;" onclick="addImageReplacement()">
+            <icon-component name="plus" size="sm"></icon-component>
+            添加替换
+          </button>
+        </div>
       </div>
 
       <!-- Analysis Panel -->
