--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,10 @@
           <icon-component name="save"></icon-component>
           保存
         </button>
+        <button class="btn btn-secondary" onclick="downloadPagesConfig()">
+          <icon-component name="download"></icon-component>
+          下载配置
+        </button>
         <button class="btn btn-primary" onclick="showPromptModal()">
           <icon-component name="sparkles"></icon-component>
           生成提示词
