--- a/public/index.html
+++ b/public/index.html
@@ -111,6 +111,7 @@
           <button class="device-btn" data-width="390" data-height="844">iPhone Pro</button>
           <button class="device-btn" data-width="360" data-height="780">Android</button>
         </div>
+        <span class="preview-info" id="previewInfo">未选择文件</span>
         <div class="preview-actions">
           <div class="zoom-control">
             <button class="zoom-btn" onclick="adjustZoom(-0.05)" title="缩小">
@@ -133,7 +134,6 @@
             <icon-component name="target"></icon-component>
             <span id="pickerBtnText">选择元素</span>
           </button>
-          <span class="preview-info" id="previewInfo">未选择文件</span>
         </div>
       </div>
       <div class="preview-frame-wrapper">
@@ -153,8 +153,8 @@
     <!-- Panel -->
     <aside class="panel">
       <div class="panel-tabs">
-        <div class="panel-tab active" data-panel="file">文件配置</div>
-        <!-- <div class="panel-tab" data-panel="analysis">智能分析</div> -->
+        <div class="panel-tab active" data-panel="file">页面配置</div>
+        <div class="panel-tab" data-panel="analysis">数据管理</div>
       </div>
 
       <!-- File Config Panel -->
@@ -193,6 +193,34 @@
           <select class="form-select" id="fileGroup">
             <option value="">未分组</option>
           </select>
+        </div>
+
+        <div class="panel-section">
+          <div class="panel-section-title">Tabbar 配置</div>
+          <div class="form-group">
+            <label class="checkbox-label">
+              <input type="checkbox" id="isTabbarPage" onchange="toggleTabbarConfig()">
+              <span>这是 Tabbar 页面</span>
+            </label>
+          </div>
+          <div id="tabbarConfigFields" style="display:none;">
+            <div class="form-group">
+              <label class="form-label">Tab 序号（从1开始）</label>
+              <input type="number" class="form-input" id="tabIndex" min="1" max="10" placeholder="如：1">
+            </div>
+            <div class="form-group">
+              <label class="form-label">Tab 名称</label>
+              <input type="text" class="form-input" id="tabName" placeholder="如：首页">
+            </div>
+            <div class="form-group">
+              <label class="form-label">默认图标路径</label>
+              <input type="text" class="form-input" id="tabIconDefault" placeholder="如：assets/tab_home.png">
+            </div>
+            <div class="form-group">
+              <label class="form-label">选中图标路径</label>
+              <input type="text" class="form-input" id="tabIconSelected" placeholder="如：assets/tab_home_selected.png">
+            </div>
+          </div>
         </div>
 
         <div class="panel-section">
